--- a/linkhub/src/components/Css/Create.css
+++ b/linkhub/src/components/Css/Create.css
@@ -1,7 +1,8 @@
 .inputGroup {
     font-family: 'Segoe UI', sans-serif;
     margin: 1em 0 1em 0;
-    max-width: 490px;
+    /* max-width: 500px; */
+    width:50%;
     position: relative;
   }
   
@@ -19,6 +20,7 @@
     font-size: 100%;
     position: absolute;
     left: 0;
+    top:10%;
     padding: 0.8em;
     margin-left: 0.5em;
     pointer-events: none;
@@ -31,9 +33,33 @@
     margin: 0em;
     margin-left: 1.3em;
     padding: 0.4em;
-    background-color: #e8e8e8;
+    background-color: white;
   }
   
   .inputGroup :is(input:focus, input:valid) {
     border-color: rgb(150, 150, 200);
+    border-color: rgb(131, 131, 208);
+
+  }
+  .flex{
+    display: flex;
+    width:100%;
+  }
+  .r{
+    margin-right: 65px;
+  }
+  .create_form{
+    width:60vw;
+  }
+  .create_title{
+    color: rgb(93, 93, 161);
+
+  }
+  .create_btn{
+    background-color: rgb(93, 93, 161);
+    color:white;
+    padding: 10px;
+    border-radius: 10px;
+    width: 100px;
+    
   }
