--- a/linkhub/src/components/Css/Form.css
+++ b/linkhub/src/components/Css/Form.css
@@ -44,7 +44,9 @@ a:visited{
     color:black;
 }
 .switch_btn:hover{
-    background-color: rgb(48, 48, 190);
+    /* background-color: rgb(48, 48, 190); */
+    background-color: rgb(93, 93, 161);
+
     color:white;
 }
 .form_inputs{
@@ -65,7 +67,8 @@ padding: 0px 10px;
 }
 .submit_btn{
     min-width:15vw;
-    background-color: rgb(48, 48, 190);
+    /* background-color: rgb(48, 48, 190); */
+    background-color: rgb(93, 93, 161);
     color:white;
     min-height: 40px;
     padding: 0px 10px;
