--- a/linkhub/src/components/Css/Form.css
+++ b/linkhub/src/components/Css/Form.css
@@ -5,8 +5,8 @@
     font-family:'Poppins', sans-serif;
 }
 .bg{
-    min-width: 100vw;
-    min-height:100vh;
+    width: 100%;
+    /* height:90vh; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -41,11 +41,13 @@ margin-bottom: 20px;
     justify-content: center;
 }
 a:visited{
-    color:black;
+    color:white;
 }
 .switch_btn:hover{
     /* background-color: rgb(48, 48, 190); */
-    background-color: rgb(93, 93, 161);
+    /* background-color: rgb(93, 93, 161); */
+    background-color: #d34675;
+
 
     color:white;
 }
@@ -68,7 +70,8 @@ padding: 0px 10px;
 .submit_btn{
     min-width:15vw;
     /* background-color: rgb(48, 48, 190); */
-    background-color: rgb(93, 93, 161);
+    /* background-color: rgb(93, 93, 161); */
+    background-color: #d34675;
     color:white;
     min-height: 40px;
     padding: 0px 10px;
@@ -85,7 +88,7 @@ a{
 }
 .form_title{
     text-align: center;
-    color: black;
+    color: white;
     padding: 20px;
 }
 .message{
