--- a/linkhub/src/components/Css/NavBar.css
+++ b/linkhub/src/components/Css/NavBar.css
@@ -1,15 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Abyssinica+SIL&family=Montserrat&family=Poppins:wght@300;500&display=swap');
 .nav_ul{
     display: flex;
     list-style-type: none;
-    background-color: rgb(64, 64, 205);
     align-content: center;
-    min-height: 40px;
+    font-family: 'Montserrat', sans-serif;
+    padding:10px 5px;
+    font-size: 17px;
+}
+body{
+    background-color: #24252A;
+
 }
 .nav_li{
-color:white;
 margin:0px 20px;
-padding: 10px 20px;
+padding: 5px 10px;
+
+}
+.nav_li>a:visited{
+color:white;
 }
 .right{
     margin-left: auto;
+}
+.rbtn{
+    border-radius: 20px;
+}
+.rbtn:hover{
+    background-color: #d34675;
+
 }
